--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <h1>My Contact Info</h1>
     <h3>Email</h3>
     <p>rbnsngrgg@gmail.com</p>
-    <h3><a href="https://www.instagram.com/hosiah_r/">Instagram</a></h3>
+    <h3><a href="https://www.instagram.com/haisoh_r/">Instagram</a></h3>
     <form action="mailto:rbnsngrgg@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value="">
