--- a/index.html
+++ b/index.html
@@ -4,30 +4,24 @@
 <head>
   <meta charset="utf-8">
   <title>Gregg's Personal Site</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="me.jpg" alt="Gregg Robinson" style="width:150px;height:200px;"></td>
+      <td><img src="me.jpg" alt="Gregg Robinson" id="myImg"></td>
       <td>
         <h1>Gregg Robinson</h1>
         <p><em>Prototype Technician at <strong>Perceptron, Inc.</strong></em></p>
         <p>
           I am a US Marine veteran currently working in manufacturing engineering and metrology in Plymouth, MI.
-          I'm currently a Computer Science student, learning web development.
+          I'm currently a Code Platoon student, learning web development/software engineering.
           My current work includes Python and C# programming for workplace desktop applications.
         </p>
       </td>
     </tr>
   </table>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Oakland Community College</li>
-    <li>Henry Ford College</li>
-  </ul>
-  <hr>
   <h3>Work Experience</h3>
   <table cellspacing="10">
     <thead>
