--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
       <li><a href="https://steamcommunity.com/id/haisoh">Video games</a></li>
       <li><a href="https://myanimelist.net/animelist/kamikaizaken">Anime</a></li>
       <li><a href="https://github.com/rbnsngrgg">Programming</a></li>
-      <li><a href="https://www.instagram.com/hosiah_r/">Weightlifting</a></li>
+      <li><a href="https://www.instagram.com/haisoh_r/">Weightlifting</a></li>
     </ol>
   </body>
 </html>
